Fix overflowing nav item

--- a/src/style/sass/index.scss
+++ b/src/style/sass/index.scss
@@ -10,18 +10,32 @@
 }
 
 body {
+  overflow-x: hidden;
   font-family: $main;
   font-size: $mid;
 }
 
+main {
+  width: 100%;
+  display: grid;
+  grid-template-columns: 20px 1fr 20px;
+}
+
+section {
+  grid-column: 2 / -2;
+}
+
 .navbar {
   background: transparent;
+  padding-right: 20px;
   .logo {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 20px;
+    // padding: 20px;
+    padding-top: 60px;
     padding-left: 5px;
+    height: 60px;
 
     img {
       transform: scale(0.75);
@@ -29,7 +43,11 @@ body {
     }
 
     .hamburger {
-      transform: scale(1.35);
+      display: flex;
+      align-items: center;
+      transform: rotate(-180deg) scale(1.35);
+      transform-origin: center;
+      transition: 0.3s;
       cursor: pointer;
     }
   }
@@ -37,9 +55,9 @@ body {
   nav {
     visibility: hidden;
     position: absolute;
-    transform: scale(0);
     transition: 0.3s;
-    transform-origin: top right;
+    transform: translateX(500px);
+    transform-origin: right;
     top: 100px;
     width: 100%;
     height: 100%;
@@ -53,8 +71,6 @@ body {
       text-align: center;
       font-weight: $semi-bold;
       color: $dark-blue;
-      // box-shadow: 1px 1px 1px 1px rgba(255, 255, 255, 0.2),
-      //   -1px -1px 1px 1px rgba(255, 255, 255, 0.2);
 
       li {
         padding: 10px;
@@ -64,8 +80,12 @@ body {
   }
 
   nav[class~="show"] {
-    transform: scale(1);
+    transform: translateX(0);
     visibility: visible;
+  }
+
+  .hamburger[class~="show"] {
+    transform: rotate(0deg) scale(1.35);
   }
 
   button {
@@ -74,11 +94,14 @@ body {
 }
 
 .hero {
+  grid-column: 1/-1;
+  padding: 0 20px;
+  padding-right: 0;
   position: relative;
   z-index: -1;
-  top: -100px;
+  top: -90px;
   .container-1 {
-    padding-top: 100px;
+    padding-top: 135px;
     background-image: url("../../images/bg-tablet-pattern.svg");
     background-size: cover;
     background-repeat: no-repeat;
@@ -87,6 +110,15 @@ body {
 
     img {
       width: 100%;
+      padding-right: 20px;
     }
   }
+
+  .container-2 {
+    padding-right: 20px;
+  }
+}
+
+footer {
+  background-color: yellow;
 }
